--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:theme="@style/Theme.SignupLoginRealtime"
         tools:targetApi="31">
         <activity
+            android:name=".DetailActivity1"
+            android:exported="false" />
+        <activity
+            android:name=".CalendarTample"
+            android:exported="false" />
+        <activity
             android:name=".test_activity"
             android:exported="false" />
         <activity
@@ -27,7 +33,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
